# Autonomous-RL-Trading-Bot

./: .cursorrules  .env.example  .gitignore  CHATGPT_PROMPT.md  LICENSE  Makefile  README.md  TradingBotDashboard.spec  app_desktop.py  inspect_db.py  make_code_zip.py  pyproject.toml  run_backtest.py  run_baselines.py  run_build_dataset.py  run_dashboard.py  run_fetch_data.py  run_live_demo.py  run_train.py  trade launch.txt
configs/: base.yaml
configs/data/: binance_futures_testnet.yaml  binance_spot_testnet.yaml
configs/env/: futures_env.yaml  spot_env.yaml
configs/evaluation/: backtest.yaml  baselines.yaml
configs/features/: feature_set_v1.yaml  scaling.yaml
configs/live/: demo.yaml
configs/modes/: futures.yaml  spot.yaml
configs/training/: dqn.yaml  ppo.yaml
docs/: CODEBASE_AUDIT.md  ENGINEERING_REPORT.md  GIT_UPLOAD_CHECKLIST.md  SUMMARY.md  VALIDATION.md  architecture.md
docs/architecture/: rl_loop.mmd  system_flow.mmd
models/: ppo_trader_config.json
reports/: backtest_report.json
reports/repro/20260118T182057Z_spot_BTCUSDT_1m_w30_t2000_s42/: comparison.json  comparison.md  run_config.json  training_metrics.json
reports/verify/20260118T182124Z_spot_BTCUSDT_1m_w30_t2000_s42/: comparison.json  comparison.md  run_config.json  training_metrics.json
scripts/: bootstrap_env.py  build_features.py  download_binance_futures.py  export_validation_pack.py  make_dataset.py  migrate.py
sql/: schema.sql
sql/migrations/: 001_init.sql  002_candles.sql  003_backtests.sql  004_backtests_futures.sql  005_backtests_uniqueness.sql  006_train_jobs.sql  007_live_trading.sql
src/autonomous_rl_trading_bot/: __main__.py  cli.py  main.py  run_backtest.py  run_dataset.py  run_fetch.py  run_train.py
src/autonomous_rl_trading_bot/agents/: ppo_agent.py
src/autonomous_rl_trading_bot/backtest/: __init__.py  metrics.py  runner.py
src/autonomous_rl_trading_bot/broker/: __init__.py  base_broker.py  execution.py  futures_broker.py  spot_broker.py
src/autonomous_rl_trading_bot/commands/: __init__.py  backtest.py  baselines.py  dataset.py  live.py  train.py
src/autonomous_rl_trading_bot/common/: __init__.py  config.py  constants.py  db.py  exceptions.py  fs.py  git_utils.py  hashing.py  http.py  logging.py  paths.py  reproducibility.py  run_ids.py  time.py  timeframes.py  types.py  utils.py
src/autonomous_rl_trading_bot/dashboard/: __init__.py  app.py  callbacks.py  components.py  data_api.py  layout.py  live_session.py
src/autonomous_rl_trading_bot/data/: __init__.py  binance_futures.py  binance_spot.py  candles_store.py  dataset_builder.py  dataset_loader.py  exchange_client.py  feature_engineering.py  ohlcv.py
tests/: conftest.py  test_backtest_artifacts.py  test_backtest_determinism.py  test_backtest_smoke.py  test_baseline_backtest.py  test_baselines_cli.py  test_cli_smoke.py  test_config.py  test_dataset.py  test_dataset_leakage_free.py  test_db.py  test_env_futures.py  test_env_spot.py  test_feature_alignment.py  test_live_process_manager.py  test_reporting_artifacts.py  test_repro_smoke.py  test_reproducibility.py  test_risk_killswitch.py  test_step3_parsing.py  test_step4_dataset.py  test_trading_env.py  test_train_smoke.py
tools/: make_code_zip.py
webapp_backend/: __init__.py
(+70 files in other folders)
