[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-rl-trading-bot"
version = "0.1.0"
description = "Autonomous RL Trading Bot (v1)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mohamed" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.2",
    "torch>=2.0.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "dash>=2.17",
    "ccxt>=4.3.0",
    "scikit-learn>=1.3.0",
    "reportlab>=4.0",
    "pywebview>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.0",
  "black>=24.8.0",
]

[project.scripts]
arbt = "autonomous_rl_trading_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]


